--- a/Lab3/lab3css.css
+++ b/Lab3/lab3css.css
@@ -58,9 +58,9 @@ img.a {
         display: flex;
         align-items: center;
     }
-    .text{
+   /* .text{
         white-space: now;
-    }
+    }*/
 
 
     .contaner2{
